# examples/hello-mysql/docs/swagger.yaml
@@ -20,6 +20,23 @@ definitions:
       type:
         type: string
     type: object
+  users.ProblemDetails:
+    properties:
+      detail:
+        type: string
+      instance:
+        type: string
+      invalidParams:
+        items:
+          $ref: '#/definitions/validation.InvalidParam'
+        type: array
+      status:
+        type: integer
+      title:
+        type: string
+      type:
+        type: string
+    type: object
   users.UpdateUserInput:
     properties:
       email:
@@ -38,6 +55,13 @@ definitions:
       name:
         type: string
       updated_at:
+        type: string
+    type: object
+  validation.InvalidParam:
+    properties:
+      name:
+        type: string
+      reason:
         type: string
     type: object
 info:
@@ -64,6 +88,15 @@ paths:
   /users:
     get:
       description: Returns all users.
+      parameters:
+      - description: Page (>= 1)
+        in: query
+        name: page
+        type: integer
+      - description: Limit (>= 1)
+        in: query
+        name: limit
+        type: integer
       produces:
       - application/json
       responses:
@@ -97,7 +130,7 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/users.Problem'
+            $ref: '#/definitions/users.ProblemDetails'
         "409":
           description: Conflict
           schema:
@@ -184,7 +217,7 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/users.Problem'
+            $ref: '#/definitions/users.ProblemDetails'
         "404":
           description: Not Found
           schema:
